@startuml

title __STATES's Class Diagram__\n

  namespace Player {
    namespace States {
      class Player.States.Attack {
          {static} - i : int
          + Attack()
          + handleInput()
          + init()
      }
    }
  }
  

  namespace Player {
    namespace States {
      class Player.States.Crouch {
          + Crouch()
          + handleInput()
          + init()
      }
    }
  }
  

  namespace Player {
    namespace States {
      class Player.States.Dash {
          + Dash()
          + handleInput()
          + init()
      }
    }
  }
  

  namespace Player {
    namespace States {
      class Player.States.Ded {
          + Ded()
          + handleInput()
          + init()
      }
    }
  }
  

  namespace Player {
    namespace States {
      class Player.States.Fall {
          + Fall()
          + handleInput()
          + init()
      }
    }
  }
  

  namespace Player {
    namespace States {
      class Player.States.Idle {
          + Idle()
          + handleInput()
          + init()
      }
    }
  }
  

  namespace Player {
    namespace States {
      class Player.States.Jump {
          + Jump()
          + handleInput()
          + init()
      }
    }
  }
  

  namespace Player {
    namespace States {
      abstract class Player.States.PlayerState {
          {static} # TimerVerticalSpeed : double
          {static} # horizontalSpeed : int
          {static} # input : KeyInput
          {static} # player : Player
          {static} # prev : PlayerState
          {static} # timerDash : int
          {static} # timerTime : int
          {static} # verticalSpeed : int
          {static} + getInput()
          {static} + getPrev()
          {static} + gravity()
          {abstract} + handleInput()
          {abstract} + init()
          {static} + setInput()
          {static} + setPlayer()
          {static} + setPrev()
          {static} + setTimerVerticalSpeed()
          {static} + timerPass()
      }
    }
  }
  

  namespace Player {
    namespace States {
      class Player.States.Walk {
          + Walk()
          + handleInput()
          + init()
      }
    }
  }
  

  Player.States.Attack -up-|> Player.States.PlayerState
  Player.States.Crouch -up-|> Player.States.PlayerState
  Player.States.Dash -up-|> Player.States.PlayerState
  Player.States.Ded -up-|> Player.States.PlayerState
  Player.States.Fall -up-|> Player.States.PlayerState
  Player.States.Idle -up-|> Player.States.PlayerState
  Player.States.Jump -up-|> Player.States.PlayerState
  Player.States.Walk -up-|> Player.States.PlayerState


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
